// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search render correctly with value 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 8,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 12,
        "paddingRight": 8,
      },
      undefined,
    ]
  }
>
  <View />
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[MockFunction]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      [
        {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 16,
          "outlineWidth": 0,
          "padding": 0,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
    value="value"
  />
  <View
    accessibilityLabel="cancelSearch"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#D1D4DB",
        "borderRadius": 24,
        "justifyContent": "center",
        "padding": 4,
      }
    }
  >
    <Text
      allowFontScaling={true}
      style={
        {
          "color": "#5E6678",
          "fontFamily": "Neotis",
          "fontSize": 16,
        }
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Search render correctly without value 1`] = `
<View
  accessible={true}
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#EEEFF1",
        "borderRadius": 8,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "center",
        "paddingLeft": 12,
        "paddingRight": 8,
      },
      undefined,
    ]
  }
>
  <Text
    allowFontScaling={true}
    style={
      {
        "color": "#5E6678",
        "fontFamily": "Neotis",
        "fontSize": 24,
      }
    }
  >
    
  </Text>
  <TextInput
    accessibilityLabel="search"
    allowFontScaling={true}
    onChangeText={[Function]}
    placeholder="Поиск"
    placeholderTextColor="#5E6678"
    selectionColor="#2B78EE"
    style={
      [
        {
          "color": "#20242D",
          "flex": 1,
          "fontSize": 16,
          "outlineWidth": 0,
          "padding": 0,
          "paddingHorizontal": 8,
        },
        undefined,
      ]
    }
  />
</View>
`;
